--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 version: "3"
 services:
-  springBootApp:
+  databridgeApp:
     image: databridge:latest
     container_name: databridge-postgres-app
     environment:
