add new volume for postgresql data

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,7 @@ services:
     networks:
       - network
     volumes:
+      - ./pgdata:/var/lib/postgresql/data
       - ./sql/create_tables.sql:/docker-entrypoint-initdb.d/create_tables.sql
     environment:
       - POSTGRES_USER=postgres
@@ -32,3 +33,4 @@ networks:
 
 volumes:
   volume:
+  pgdata:
